Feature:
- Create relationship between Category and Product
- init Branch modules
- init Shop Modules